--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,4 +1,11 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nhrnni253/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nhrnni253/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726623.md#1" target="_blank">拟高价买下高以翔遗作 浙江卫视遭剧作方拒绝</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726623.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1604100956401487-150x120.jpg" align ="left"></a>35岁的台湾艺人高以翔在大陆录制浙江卫视的综艺节目骤逝后，追思会于12月15日在台北殡仪馆举行，许多亲友到场送他最后一程，场面哀戚。其遗作《怪你过分美丽》的出品方“恒星引力”CEO在微博发文悼念时，高以翔的粉丝留言请求不要卖新剧给浙江卫视，该CEO回复“不会的”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726774.md#1" target="_blank">爆料：港惩教署精神病院押送大批“犯人”</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726774.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/9fd135e6c3413e282970338692a56144-150x120.jpg" align ="left"></a>12月16日，有消息人士向《大纪元时报》爆料，指小榄精神病治疗中心扩建的同时，连日来至少见证两次在附近大规模封路、戒严，同时押送犯人，每次时间长达半个钟头，其中有被封闭得密不透风的警车散发出极为刺鼻、类似腐肉臭味，疑有被拘捕的“反送中”抗争者被送入精神病院注射“懵仔针”，以及有“犯人”在精神病院被弄死后秘密送走。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726708.md#1" target="_blank">709律师李春富遭边控 质问当局怕什么</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726708.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/DBx3xzJU0AAdTez-150x120.jpeg" align ="left"></a>12月16日，大陆维权律师李春富对外发布消息说，他在云南景洪口岸遭到中共警方拦截，被限制出境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726651.md#1" target="_blank">11月房价下跌城市再增 京广二手房续跌</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726651.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1411080052482663-600x400-1-150x120.jpg" align ="left"></a>中共国家统计局12月16日公布数据显示，11月份新建和二手商品住宅价格下跌的城市数量继续增加、价格上涨城市继续减少。中国房企年末为了销量纷纷降价售房，北京甚至出现20%的降幅，但实际销售量仍然不佳。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726553.md#1" target="_blank">习近平和李克强见林郑 出现三大变化</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726553.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/lkq-linzhengyuee-150x120.jpg" align ="left"></a>香港特首进京向习近平、李克强述职时，出现三大变化。除习近平的讲话内容、陪同会见的人员有变化外，李克强会见特首时的地点也有变化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726641.md#1" target="_blank">薄熙来之子薄瓜瓜 最新行踪曝光</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726641.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/08/1204120831291758-150x120.jpg" align ="left"></a>在公众视野中消失了很久的薄熙来的儿子——薄瓜瓜，正在加拿大鲍尔集团股份有限公司（Power Corporation of Canada，简称 PCC）工作。有人认为，PCC雇用薄瓜瓜是为了中国市场；也就人认为，这是一步危险的棋。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726630.md#1" target="_blank">中共赤膊上阵救华为 在欧洲进行战狼式外交</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726630.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1153137465-150x120.jpg" align ="left"></a>中共与美国签署的“第一阶段”贸易的协议中，没有为华为捞到半点好处，但是中共继续加紧在全球范围内帮助华为扩张，尤其是在欧洲竟然不避嫌地进行“战狼式”外交。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726351.md#1" target="_blank">【新闻看点】习李再撑林郑 港人：抗争无选择</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726351.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1189006322-150x120.jpg" align ="left"></a>香港特首林郑月娥今天（12月16日）在北京又一次见到了北京最高领导人。习近平和李克强分别在会见中，对林郑和港府“处理香港修例风波”表示肯定。习近平还加重语气重申支持香港警方“严正执法”。而在林郑后院，香港人的怒火依然在烧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:09 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726652.md#1" target="_blank">柳传志本周将卸任联想控股董事长</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726652.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/150615093725100311-150x120.jpg" align ="left"></a>今年75岁的柳传志将正式卸任联想控股董事长，该消息预计将于12月18日官方宣布。这意味着联想第一代企业家将正式完成交接班。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726616.md#1" target="_blank">今年大陆3228家影视公司消失 65%演员没戏演</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111171140403-600x400-150x120.jpg" align ="left"></a>2019年，大陆一线演艺界明星纷纷失业，65%的演员无剧播出，超过3,228家影视公司消失。对此，有分析说，除了经济因素外，也跟当局对影视作品进行“审查”有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:50 AM							</td></tr>
@@ -25,15 +32,8 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725629.md#1" target="_blank">路透社曝最大客户路孚特屈从中共 封锁新闻</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725629.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-74125130-150x120.jpg" align ="left"></a>路透社指控其母公司持有股权的、也是该社最大客户的金融讯息供应商路孚特（Refinitiv）屈从中共的压力，将大量与香港反送中抗争和六四事件有关的新闻封锁，使其无法进入中国大陆境内。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 5:48 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725212.md#1" target="_blank">天津权健董事长束昱辉等12人一审开庭</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725212.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/quanjian-150x120.jpg" align ="left"></a>12月16日，天津权健自然医学科技发展有限公司（下称权健集团）董事长束昱辉等12人组织、领导传销活动一案开审，被告均当庭表示认罪。此案择期宣判。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 5:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724964.md#1" target="_blank">美中第一阶段协议 强制执行机制如何运作</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724964.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/000_1GC5E8-150x120.jpg" align ="left"></a>美中贸易战历时一年半后达成第一阶段贸易协议，川普（特朗普）总统表示这是一项很大的第一阶段协议，迈出巨大的第一步。美方认为，若中方不守诺，美方在括强制执行机制下，可做成回应，包括用关税回应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:57 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725505.md#1" target="_blank">专访港大校友团麦东荣：访英的三个目的</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725505.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5-1-150x120.jpeg" align ="left"></a>香港大学校友关注组副召集人麦东荣向大纪元记者讲述了他们一行人此次访英的三个目的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:38 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725432.md#1" target="_blank">港大专院校学生校友团抵英 为港人发声</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725432.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-2-150x120.jpeg" align ="left"></a>12月13日，“香港大专院校学生校友访英团”在伦敦大学亚非学院（SOAS）举行活动，声援香港人们的民众运动。来访者包括港大校友关注组副召集人麦东荣、旺角东选区候任议员林兆彬、油麻地南选区候任议员胡穗珊以及香港中文大学、理工大学、岭南大学的代表。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 3:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11724221.md#1" target="_blank">美国40多年来是如何帮助中国的</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11724221.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/06-dave-150x120.jpg" align ="left"></a>12月12日，美国亚太助理国务卿史达伟（David Stilwell）就“美中关系和历史的教训”为题在华府智库“战略与国际研究中心（CSIS）”发表演讲，讲述了40多年来美国如何帮助中国的历史。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 3:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/23/n11675424.md#1" target="_blank">中共控制留学生 破坏美国大学学术自由</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/23/n11675424.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/classroom-381900_1280-150x120.jpg" align ="left"></a>中共通过驻外使馆对海外留学生进行控制，有西方学者已认识到中共正在系统地破坏西方学术自由，动摇西方价值体系根基，并出台了准则，共同抵制对学术自由的威胁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 2:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725028.md#1" target="_blank">林郑月娥赴京述职地点突改变 引揣测</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725028.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/36-1-150x120.jpg" align ="left"></a>香港特首林郑月娥日前进京述职。今天（12月16日），林郑分别与李克强、习近平见面，汇报香港的最新情况。有报导说，林郑今天的述职地点，由此前的中南海紫光阁改为人民大会堂，引外界揣测。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 2:11 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724857.md#1" target="_blank">“辱母杀人案”苏银霞出狱 49岁头发全白</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11724857.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/6a03dc1766fd694f949bbd8833d26a2c-150x120.jpg" align ="left"></a>山东“辱母杀人案”的母亲苏银霞，坐牢3年后，于12月14日刑满释放。现年49岁的苏银霞头发全白了。她说，在监狱特别愁，心理压力特别大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 2:04 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726385.md#1" target="_blank">武汉78岁法轮功学员汪文清面临非法起诉</a><br></h3>11月22日，武汉市黄陂区姚集派出所警察闯入78岁法轮功学员汪文清的家，要求他在事先打印好的所谓“笔录”上签字，企图非法起诉他，汪文清拒签。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725870.md#1" target="_blank">河南高速现多起事故 5人惊慌逃生坠桥死亡</a><br></h3>12月15日晚上7时许，因雨雪天气，河南省三门峡市连霍高速K795连续发生多起交通事故，5名司乘人员惊慌中逃生，翻越墙式护栏意外坠桥死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 7:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725738.md#1" target="_blank">中共军工专家李守泽突然去世 引关注</a><br></h3>日前，现年58岁的中共军工企业、中航飞机股份有限公司（下称中航飞机）副总经理李守泽去世，引外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 6:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725328.md#1" target="_blank">湖南新晃县一中操场埋尸案明日开审</a><br></h3>曾轰动一时的湖南新晃县一中“操场埋尸案”，明日（12月17日）将公开庭审。嫌疑人杜少平被指控犯故意杀人罪、故意伤害罪、寻衅滋事罪、非法拘禁罪、聚众斗殴罪、强迫交易罪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:54 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11724338.md#1" target="_blank">河北遵化 12名法轮功学员面临非法庭审</a><br></h3>7月6日，遵化多个村镇的法轮功学员几乎同时在凌晨3点多遭到警察入室绑架、抄家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:51 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nhrnni253/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nhrnni253/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
